[package]
name = "copy_dir"
version = "0.2.0"
description = "Copy directories recursively in a straightforward and predictable way."
license = "MIT"
readme = "README.md"
authors = ["Michael Dunsmuir <mjdunsmuir@gmail.com>"]
homepage = "https://github.com/mdunsmuir/copy_dir"
documentation = "https://docs.rs/copy_dir"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[dependencies]
log = "0.3.7"

[dev-dependencies]
walkdir = "1.0.7"
fs_test_helpers = { git = "https://github.com/mdunsmuir/fs_test_helpers" }
